fixed z-index

--- a/assets/css/critical.scss
+++ b/assets/css/critical.scss
@@ -13,6 +13,7 @@
 }
 
 .modal-container {
+	z-index: 20;
   position: fixed;
   top: 0;
   left: 0;
